# RobotSimulation

./: CMakeLists.txt  README.md  robot_build.py  version.ini
Include/: Robot.h  RobotCommand.h  RobotCoordinate.h  RobotDirection.h  RobotErrorCodes.h  RobotPosition.h  RobotResource.h  RobotStringHelper.h
Source/: Robot.cpp  RobotDirection.cpp  RobotMain.cpp  RobotStringHelper.cpp
Test/Include/: catch2.hpp
Test/Source/: RobotTestMain.cpp  Robot_Test_Command_Integration.cpp  Robot_Test_Left_Command.cpp  Robot_Test_Move_Command.cpp  Robot_Test_Place_Command.cpp  Robot_Test_Report_Command.cpp  Robot_Test_Right_Command.cpp
